...
            onPressed: () {
              _formKey.currentState!.fields['title']?.didChange(null);
              _unFocusKeyboard();
            },
          ),
          IconButton(
            key: const Key("TodoInputBarSendButton"),
            icon: const Icon(Icons.send),
            onPressed: _onSave,
          ),
        ],
      );
    }
...
      },
    );
  }

  Widget _buildInput() => FormBuilderTextField(
        name: "title",
        key: Key("TodoInputBarTitleForm"),
        focusNode: _titleFocusNode,
        initialValue: widget.initialTitle,
        autofocus: true,
        validator: FormBuilderValidators.compose([
          FormBuilderValidators.required(),
          FormBuilderValidators.minLength(3),
...
