...
    }
    return manager.watch();
  }

  FutureOr<String> createTitle(BuildContext context) {
    if (projectFilter == null && tagFilter == null && daysAhead == null) {
      return "All Todos";
    }
    if (daysAhead != null) {
      if (daysAhead == 1) {
        return "Today";
      }
      return "$daysAhead days";
...
